----------------------------------------------------------------------
 OmegaT 3.1.0 
----------------------------------------------------------------------
   6 Enhancements
   4 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
3.1.0 vs. 3.0.8 update 3

  Implemented requests:

  - Add facility for conflict resolution during team sync
  https://sourceforge.net/p/omegat/feature-requests/950/

  - Find and Replace (poss. with regex) 
  https://sourceforge.net/p/omegat/feature-requests/66/

  - Search in comments
  https://sourceforge.net/p/omegat/feature-requests/943/

  Other enhancements:
  
  - If there is a selection When inserting a tag pair, the tags are
put on each side of the selection

  - Synchronisation does not occur anymore when creating translated
documents in team projects

  - The default character set for the PO filter is now UTF-8, as it
is the most common encoding for those files

  Bug fixes:

  - Monolingual .po: msgstr in exported files are empty 
  https://sourceforge.net/p/omegat/bugs/654/

  - Error on saving team project without glossary file 
  https://sourceforge.net/p/omegat/bugs/657/

  - Problem using Filter in search window when no matches are returned 
  https://sourceforge.net/p/omegat/bugs/653/

  - XLIFF filter: untranslatable text (translate="no") appeared in the Editor

  Localisation updates:

  - Japanese localisation updated to 3.1.0 (UI, Documentation, Readme)

----------------------------------------------------------------------
 OmegaT 3.0.8 update 3 (2014-01-27)
----------------------------------------------------------------------
   2 Enhancements
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
3.0.8 update 3 vs. 3.0.8 update 2

  Implemented requests:

  - Insert Next Missing Tag Pair 
  https://sourceforge.net/p/omegat/feature-requests/947/

  Other enhancements:
